--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <hr>
                 <div id="initial-card">
                     <ul id="initial-col">
+                        <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
             </div>
@@ -27,6 +28,7 @@
                 <hr>
                 <div>
                     <ul>
+                        <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
             </div>
@@ -35,6 +37,7 @@
                 <hr>
                 <div>
                     <ul>
+                        <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
             </div>
