--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2 class="card-title"> Fazer </h2>
                 <hr>
                 <div id="initial-card">
-                    <ul id="initial-col">
+                    <ul id="to-do-list">
                         <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
@@ -27,7 +27,7 @@
                 <h2 class="card-title"> Fazendo </h2>
                 <hr>
                 <div>
-                    <ul>
+                    <ul id="doing-list">
                         <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
@@ -36,7 +36,7 @@
                 <h2 class="card-title"> Feito </h2>
                 <hr>
                 <div>
-                    <ul>
+                    <ul id="done-list">
                         <li class="first-li"> Arraste aqui! </li>
                     </ul>
                 </div>
