fix: height buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main">
         <h1> To-do List </h1>
-        <div>
+        <div id="inputs">
             <input id="new-task" type="text" placeholder="Digite uma tarefa">
             <input id="btn-add" type="submit" onclick="addTask()">
         </div>
