--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> To Do List </title>
+    <meta name="description" content="To-Do-List em estilo kanban">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
