fix: ajustes pequenos mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="main">
-        <div>
+        <div id="content">
             <h1 id="title"> To-do List </h1>
             <div id="inputs">
                 <input id="new-task" type="text" placeholder="Digite uma tarefa">
