feat: ajustes semantica

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
-        <div id="content">
+    <main id="main">
+        <section id="content">
             <h1 id="title"> To-do List </h1>
-            <div id="inputs">
+            <section id="inputs">
                 <input id="new-task" type="text" placeholder="Digite uma tarefa">
                 <input id="btn-add" type="submit" onclick="addTask()">
-            </div>
-            <div id="lists">
+            </section>
+            <section id="lists">
                 <div class="card">
                     <h2 class="card-title"> Fazer </h2>
                     <hr>
@@ -43,9 +43,9 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </section>
+        </section>
+    </main>
 </body>
 <script src="index.js"></script>
 </html>
